# ludwig

./: .clang-format  .gitignore  .gitmodules  .ignore  CMakeLists.txt  README.md  Taskfile.yml  docker.sh  flake.nix  meson.build  meson_options.txt  sample.html  shell.nix
.devcontainer/: devcontainer.json
docker/: Dockerfile
extras/: binary-header.sh  binary-header.ts  generate-emoji-table.ts  generate-mock-data.ts  sample.html  static-sample-server.ts
extras/flatbuffers/: ludwig.ts  ts-models.ts
extras/flatbuffers/ludwig/: application.ts  board-sort-type.ts  board-stats.ts  board.ts  comment-sort-type.ts  comment.ts  dump-type.ts  dump.ts  emoji-shortcode.ts  emoji-table.ts  fb-void.ts  hash.ts  home-page-type.ts  invite.ts  link-card.ts  local-board.ts  local-user.ts  media-category.ts  media.ts  mod-action-edit.ts  mod-action-purge.ts  mod-action-record.ts  mod-action-set-state.ts  mod-action-target-type.ts  mod-action-type.ts  mod-action.ts  mod-state.ts  plain-text-with-emojis.ts  post-stats.ts  report.ts  rich-text-image.ts  rich-text-ref.ts  rich-text.ts  salt.ts  session.ts  setting-record.ts  site-stats.ts  sort-type.ts  subscription-batch.ts  subscription-record.ts  (+16 more)
pch/: ludwig_pch.h
src/: asio_http_client.c++  base64.c++  base64.h++  common.h++  controller.c++  controller.h++  controller_with_events.c++  controller_with_events.h++  datatypes.fbs  db.c++  db.h++  http_client.h++  id.c++  id.h++  iter.h++  jwt.c++  jwt.h++  ludwig.c++  meson.build  thumbnailer.h++  webapp_routes.c++  webapp_routes.h++  webutil.h++
src/controllers/: board_controller.c++  board_controller.h++  dump_controller.c++  dump_controller.h++  first_run_controller.c++  first_run_controller.h++  instance.c++  instance.h++  lemmy_api.c++  lemmy_api.h++  lemmy_api_controller.c++  lemmy_api_controller.h++  post_controller.c++  post_controller.h++  remote_media.c++  remote_media.h++  remote_media_controller.c++  remote_media_controller.h++  search_controller.c++  search_controller.h++  session_controller.c++  session_controller.h++  site_controller.c++  site_controller.h++  user_controller.c++  user_controller.h++
src/db/: db.c++  db.h++  iter.c++  iter.h++  page_cursor.h++
src/fbs/: meson.build  records.fbs  ts-models.fbs
src/models/: board.c++  board.h++  comment.c++  comment.h++  db.fbs  detail.c++  detail.h++  emoji_table.fbs  enums.h++  enums_pre.h++  lemmy_api.fbs  lemmy_api.h++  lemmy_api_types.x.h++  local_board.c++  local_board.h++  local_user.c++  local_user.h++  meson.build  notification.c++  notification.h++  null_placeholders.c++  null_placeholders.h++  patch.c++  patch.h++  protocols.fbs  protocols.h++  protocols_parser.c++  protocols_parser.h++  protocols_types.x.h++  site.c++  site.h++  thread.c++  thread.h++  user.c++  user.h++
src/services/: asio_event_bus.c++  asio_event_bus.h++  asio_http_client.c++  asio_http_client.h++  db.c++  db.h++  event_bus.h++  http_client.h++  lmdb_search_engine.c++  lmdb_search_engine.h++  rate_limiter.c++  rate_limiter.h++  search_engine.h++  thumbnail_cache.c++  thumbnail_cache.h++
src/static/: default-theme.css  emoji_table.fb  ludwig.js  meson.build
src/static/tokenizer/: tokenizer_model.S  tokenizer_model.h
src/util/: asio_common.h++  base64.h++  common.h++  from_json.x.h++  iter.c++  iter.h++  json.h++  jwt.c++  jwt.h++  lambda_macros.h++  rate_limiter.c++  rate_limiter.h++  rich_text.c++  rich_text.h++  router.h++  setup.c++  thumbnailer.c++  thumbnailer.h++  to_json.x.h++  web.h++  zstd_db_dump.c++  zstd_db_dump.h++
src/views/: lemmy_api.c++  lemmy_api.h++  lemmy_api_routes.c++  lemmy_api_routes.h++  media.c++  media.h++  media_routes.c++  media_routes.h++  router_common.h++  webapp.c++  webapp.h++
src/views/webapp/: admin_routes.h++  board_routes.h++  feed_routes.h++  post_routes.h++  routes.h++  search_routes.h++  static_routes.h++  user_routes.h++  webapp_common.c++  webapp_common.h++
src/views/webapp/html/: html_action_menu.h++  html_board_forms.c++  html_board_forms.h++  html_board_list.c++  html_board_list.h++  html_comment_entry.c++  html_comment_entry.h++  html_comments_page.c++  html_comments_page.h++  html_common.h++  html_feed_page.h++  html_first_run_setup_form.c++  html_first_run_setup_form.h++  html_form_widgets.c++  html_form_widgets.h++  html_list_widgets.c++  html_list_widgets.h++  html_login_forms.c++  html_login_forms.h++  html_notification_list.c++  html_notification_list.h++  html_post_widgets.c++  html_post_widgets.h++  html_rich_text.c++  html_rich_text.h++  html_search_results.c++  html_search_results.h++  html_sidebar.c++  html_sidebar.h++  html_site_admin_forms.c++  html_site_admin_forms.h++  html_thread_entry.c++  html_thread_entry.h++  html_thread_forms.c++  html_thread_forms.h++  html_user_list.c++  html_user_list.h++  html_user_settings_forms.c++  html_user_settings_forms.h++
static/: default-theme.css
subprojects/: .gitignore  giflib.wrap  simdjson.wrap
test/: asio_http_client_test.c++  async_test.c++  controller_test.c++  db_test.c++  id_test.c++  instance_test.c++  iter_test.c++  jwt_test.c++  meson.build  placeholder_test.c++  remote_media_test.c++  rich_text_test.c++  test_common.h++  thumbnail_cache_test.c++  thumbnailer_test.c++  users_and_sessions_test.c++  util.h++  web_test.c++
test/fixtures/: wikipedia_red_panda.html
test/images/: test.garbage
test/integration/: first_run_setup_test.c++  integration_common.h++  post_listings_test.c++  registration_test.c++  user_settings_test.c++
