ludwig_sources = files(
  'util/base64.c++',
  'util/iter.c++',
  'util/jwt.c++',
  'util/rate_limiter.c++',
  'util/rich_text.c++',
  'util/setup.c++',
  'util/thumbnailer.c++',
  'util/zstd_db_dump.c++',

  'services/asio_event_bus.c++',
  'services/asio_http_client.c++',
  'services/db.c++',
  'services/lmdb_search_engine.c++',
  'services/thumbnail_cache.c++',

  'models/detail.c++',
  'models/patch.c++',

  'controllers/instance.c++',
  'controllers/lemmy_api.c++',
  'controllers/remote_media.c++',

  'views/media.c++',
  'views/lemmy_api.c++',
  'views/webapp.c++',
)

subdir('models')
subdir('static')
