ludwig_sources = files(
  'util/base64.c++',
  'util/jwt.c++',
  'util/rate_limiter.c++',
  'util/rich_text.c++',

  'db/iter.c++',
  'db/db.c++',

  'services/asio_event_bus.c++',
  'services/asio_http_client.c++',
  'services/lmdb_search_engine.c++',
  'services/thumbnail_cache.c++',

  'models/board.c++',
  'models/comment.c++',
  'models/local_board.c++',
  'models/local_user.c++',
  'models/notification.c++',
  'models/site.c++',
  'models/thread.c++',
  'models/user.c++',
  'models/null_placeholders.c++',

  'controllers/board_controller.c++',
  'controllers/dump_controller.c++',
  'controllers/first_run_controller.c++',
  'controllers/lemmy_api_controller.c++',
  'controllers/post_controller.c++',
  'controllers/remote_media_controller.c++',
  'controllers/search_controller.c++',
  'controllers/session_controller.c++',
  'controllers/site_controller.c++',
  'controllers/user_controller.c++',

  'views/media_routes.c++',
  'views/lemmy_api_routes.c++',
  'views/webapp/webapp_common.c++',
  'views/webapp/html/html_board_forms.c++',
  'views/webapp/html/html_board_list.c++',
  'views/webapp/html/html_comment_entry.c++',
  'views/webapp/html/html_comments_page.c++',
  'views/webapp/html/html_first_run_setup_form.c++',
  'views/webapp/html/html_form_widgets.c++',
  'views/webapp/html/html_list_widgets.c++',
  'views/webapp/html/html_login_forms.c++',
  'views/webapp/html/html_notification_list.c++',
  'views/webapp/html/html_post_widgets.c++',
  'views/webapp/html/html_rich_text.c++',
  'views/webapp/html/html_search_results.c++',
  'views/webapp/html/html_sidebar.c++',
  'views/webapp/html/html_site_admin_forms.c++',
  'views/webapp/html/html_thread_entry.c++',
  'views/webapp/html/html_thread_forms.c++',
  'views/webapp/html/html_user_list.c++',
  'views/webapp/html/html_user_settings_forms.c++',
)

subdir('fbs')
subdir('static')
